--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -131,10 +131,10 @@ android {
     compileSdkVersion rootProject.ext.compileSdkVersion
 
     defaultConfig {
-        applicationId "construtoradiamond.centraldocorretor"
+        applicationId "br.com.construtoradiamond.centraldocorretor"
         minSdkVersion rootProject.ext.minSdkVersion
         targetSdkVersion rootProject.ext.targetSdkVersion
-        versionCode 2
+        versionCode 7
         versionName "1.1"
     }
     splits {
