--- a/android/gradle.properties
+++ b/android/gradle.properties
@@ -27,7 +27,7 @@ android.enableJetifier=true
 # Version of flipper SDK to use with React Native
 FLIPPER_VERSION=0.99.0
 
-MYAPP_UPLOAD_STORE_FILE=my-upload-key.keystore
-MYAPP_UPLOAD_KEY_ALIAS=my-key-alias
-MYAPP_UPLOAD_STORE_PASSWORD=bl0218bravo!
-MYAPP_UPLOAD_KEY_PASSWORD=bl0218bravo!
+MYAPP_UPLOAD_STORE_FILE=diamond.jks
+MYAPP_UPLOAD_KEY_ALIAS=diamond
+MYAPP_UPLOAD_STORE_PASSWORD=diamond
+MYAPP_UPLOAD_KEY_PASSWORD=diamond
