--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "lint": "eslint ."
   },
   "dependencies": {
+    "expo-splash-screen": "^0.14.2",
+    "expo-updates": "^0.11.6",
     "react": "17.0.2",
     "react-native": "0.67.2",
     "react-native-webview": "^11.17.2"
