--- a/package.json
+++ b/package.json
@@ -1,32 +1,27 @@
 {
-  "name": "centraldocorretor",
-  "version": "0.0.1",
-  "private": true,
+  "name": "centraldocorretorapp",
+  "version": "1.0.0",
+  "main": "node_modules/expo/AppEntry.js",
   "scripts": {
-    "android": "react-native run-android",
-    "ios": "react-native run-ios",
-    "start": "react-native start",
-    "test": "jest",
-    "lint": "eslint ."
+    "start": "expo start",
+    "android": "expo start --android",
+    "ios": "expo start --ios",
+    "web": "expo start --web",
+    "eject": "expo eject"
   },
   "dependencies": {
-    "expo-splash-screen": "^0.14.2",
-    "expo-updates": "^0.11.6",
-    "react": "17.0.2",
-    "react-native": "0.67.2",
-    "react-native-webview": "^11.17.2"
+    "expo": "~44.0.0",
+    "expo-status-bar": "~1.2.0",
+    "react": "17.0.1",
+    "react-dom": "17.0.1",
+    "react-native": "0.64.3",
+    "react-native-web": "0.17.1",
+    "react-native-webview": "11.15.0",
+    "expo-splash-screen": "~0.14.1",
+    "expo-updates": "~0.11.6"
   },
   "devDependencies": {
-    "@babel/core": "7.17.4",
-    "@babel/runtime": "7.17.2",
-    "@react-native-community/eslint-config": "2.0.0",
-    "babel-jest": "26.6.3",
-    "eslint": "7.14.0",
-    "jest": "26.6.3",
-    "metro-react-native-babel-preset": "0.66.2",
-    "react-test-renderer": "17.0.2"
+    "@babel/core": "^7.12.9"
   },
-  "jest": {
-    "preset": "react-native"
-  }
+  "private": true
 }
