Add first workflow

--- a/codemagic.yaml
+++ b/codemagic.yaml
@@ -1,5 +1,3 @@
 workflows:
   my-workflow:
-    scripts:
-      - name: say hello
-        script: echo "Hello Codemagician!"
+    instance_type: mac_pro
