--- a/codemagic.yaml
+++ b/codemagic.yaml
@@ -1,7 +1,6 @@
 workflows:
   my-workflow:
-    working_directory: mobile
     scripts:
-      - name: Build iOS
-        working_directory: mobile/ios
-        script: ...
+      - name: Run unit tests
+        script: ./gradlew test
+        test_report: app/build/**/*.xml
