--- a/codemagic.yaml
+++ b/codemagic.yaml
@@ -1,6 +1,13 @@
 workflows:
   my-workflow:
-    scripts:
-      - name: Run unit tests
-        script: ./gradlew test
-        test_report: app/build/**/*.xml
+    publishing:
+      app_store_connect:
+        api_key: MIGTAgEAMBMGByqGSM49AgEGCCqGSM49AwEHBHkwdwIBAQQglFJ+NOBNXO3x8bcC
+Wt9s6ahgSpMTEKvXFFL/zw4c9kKgCgYIKoZIzj0DAQehRANCAAR8ogvtW8TMsjNp
+yKs3M35/9+V8+zCr7+0+SCl7IrjZ/8F/RMYUHUxuMtMCQm/602XF5R/P2nj0S+Yt
+NUQJVjPC
+        key_id: 9ZAY8TX227
+        issuer_id: 1b3468b7-131d-4535-a545-4e2b4c7ed1e1
+        submit_to_testflight: true
+        beta_groups:
+          - Beta Testers
