--- a/codemagic.yaml
+++ b/codemagic.yaml
@@ -9,9 +9,9 @@ workflows:
         - ios_config # <-- (Includes APP_STORE_APP_ID - Put the app id number here. This is found in App Store Connect > App > General > App Information)
       # Add the group environment variables in Codemagic UI (either in Application/Team variables) - https://docs.codemagic.io/variables/environment-variable-groups/
       vars:
-        XCODE_WORKSPACE: "YOUR_WORKSPACE_NAME.xcworkspace" # <-- Put the name of your Xcode workspace here
-        XCODE_SCHEME: "YOUR_SCHEME_NAME" # <-- Put the name of your Xcode scheme here        
-        BUNDLE_ID: "YOUR_BUNDLE_ID_HERE" # <-- Put your Bundle Id here e.g com.domain.myapp
+        XCODE_WORKSPACE: "centraldocorretorapp.xcworkspace" # <-- Put the name of your Xcode workspace here
+        XCODE_SCHEME: "centraldocorretorapp" # <-- Put the name of your Xcode scheme here        
+        BUNDLE_ID: "centraldocorretorapp" # <-- Put your Bundle Id here e.g com.domain.myapp
       node: latest
       xcode: latest
       cocoapods: default
@@ -38,7 +38,7 @@ workflows:
         script: |
           # For information about Codemagic CLI commands visit: https://github.com/codemagic-ci-cd/cli-tools/blob/master/docs/app-store-connect/README.md
           # For details about the --type paramater below - https://github.com/codemagic-ci-cd/cli-tools/blob/master/docs/app-store-connect/fetch-signing-files.md#--typeios_app_adhoc--ios_app_development--ios_app_inhouse--ios_app_store--mac_app_development--mac_app_direct--mac_app_store--mac_catalyst_app_development--mac_catalyst_app_direct--mac_catalyst_app_store--tvos_app_adhoc--tvos_app_development--tvos_app_inhouse--tvos_app_store
-          app-store-connect fetch-signing-files "$BUNDLE_ID" --type IOS_APP_STORE --create          
+          app-store-connect fetch-signing-files "centraldocorretorapp" --type IOS_APP_STORE --create          
       - name: Use system default keychain
         script: |
                     keychain add-certificates
@@ -48,14 +48,14 @@ workflows:
           set -e
           set -x
           cd $CM_BUILD_DIR/ios
-          # agvtool new-version -all $(($BUILD_NUMBER + 1))
-          agvtool new-version -all $(($(app-store-connect get-latest-testflight-build-number "$APP_STORE_APP_ID") + 1))          
+          # agvtool new-version -all 2.0.0
+          agvtool new-version -all 1568491169          
       - name: Set up code signing settings on Xcode project
         script: |
                     xcode-project use-profiles --warn-only
       - name: Build ipa for distribution
         script: |
-                    xcode-project build-ipa --workspace "$CM_BUILD_DIR/ios/$XCODE_WORKSPACE" --scheme "$XCODE_SCHEME" 
+                    xcode-project build-ipa --workspace "$CM_BUILD_DIR/ios/centraldocorretorapp" --scheme "centraldocorretorapp" 
     artifacts:
       - build/ios/ipa/*.ipa
       - /tmp/xcodebuild_logs/*.log
