--- a/codemagic.yaml
+++ b/codemagic.yaml
@@ -1,76 +1,34 @@
 workflows:
-  react-native-ios:
-    name: React Native iOS
-    max_build_duration: 120
-    instance_type: mac_mini
+  ios-project-debug: # workflow ID
+    name: iOS debug # workflow name
     environment:
-      groups:
-        - appstore_credentials # <-- (Includes APP_STORE_CONNECT_ISSUER_ID, APP_STORE_CONNECT_KEY_IDENTIFIER, APP_STORE_CONNECT_PRIVATE_KEY, CERTIFICATE_PRIVATE_KEY) - https://docs.codemagic.io/code-signing-yaml/signing-ios/
-        - ios_config # <-- (Includes APP_STORE_APP_ID - Put the app id number here. This is found in App Store Connect > App > General > App Information)
-      # Add the group environment variables in Codemagic UI (either in Application/Team variables) - https://docs.codemagic.io/variables/environment-variable-groups/
-      vars:
-        XCODE_WORKSPACE: "centraldocorretorapp.xcworkspace" # <-- Put the name of your Xcode workspace here
-        XCODE_SCHEME: "centraldocorretorapp" # <-- Put the name of your Xcode scheme here        
-        BUNDLE_ID: "centraldocorretorapp" # <-- Put your Bundle Id here e.g com.domain.myapp
-      node: latest
       xcode: latest
       cocoapods: default
-    triggering:
-      events:
-        - push
-        - tag
-        - pull_request
-      branch_patterns:
-        - pattern: develop
-          include: true
-          source: true
+      vars:
+          XCODE_PROJECT: "Central do Corretor App.xcodeproj" # <-- Put the name of your project here. 
+          XCODE_SCHEME: "Central do Corretor App" # <-- Put the name of your scheme here.
     scripts:
-      - name: Install npm dependencies
+      - name: Run tests
         script: |
-                    npm install
-      - name: Install CocoaPods dependencies
+          xcodebuild \
+          -project "$XCODE_PROJECT" \
+          -scheme "$XCODE_SCHEME" \
+          -sdk iphonesimulator \
+          -destination 'platform=iOS Simulator,name=iPhone 12,OS=14.1' \
+          clean build test CODE_SIGN_IDENTITY="" CODE_SIGNING_REQUIRED=NO          
+      - name: Build debug app
         script: |
-                    cd ios && pod install
-      - name: Set up keychain to be used for codesigning using Codemagic CLI 'keychain' command
-        script: |
-                    keychain initialize
-      - name:
-        script: |
-          # For information about Codemagic CLI commands visit: https://github.com/codemagic-ci-cd/cli-tools/blob/master/docs/app-store-connect/README.md
-          # For details about the --type paramater below - https://github.com/codemagic-ci-cd/cli-tools/blob/master/docs/app-store-connect/fetch-signing-files.md#--typeios_app_adhoc--ios_app_development--ios_app_inhouse--ios_app_store--mac_app_development--mac_app_direct--mac_app_store--mac_catalyst_app_development--mac_catalyst_app_direct--mac_catalyst_app_store--tvos_app_adhoc--tvos_app_development--tvos_app_inhouse--tvos_app_store
-          app-store-connect fetch-signing-files "centraldocorretorapp" --type IOS_APP_STORE --create          
-      - name: Use system default keychain
-        script: |
-                    keychain add-certificates
-      - name: Increment build number
-        script: |
-          #!/bin/sh
-          set -e
-          set -x
-          cd $CM_BUILD_DIR/ios
-          # agvtool new-version -all 2.0.0
-          agvtool new-version -all 1568491169          
-      - name: Set up code signing settings on Xcode project
-        script: |
-                    xcode-project use-profiles --warn-only
-      - name: Build ipa for distribution
-        script: |
-                    xcode-project build-ipa --workspace "$CM_BUILD_DIR/ios/centraldocorretorapp" --scheme "centraldocorretorapp" 
+          xcodebuild build -project "$XCODE_PROJECT" \
+          -scheme "$XCODE_SCHEME" \
+          CODE_SIGN_IDENTITY="" CODE_SIGNING_REQUIRED=NO CODE_SIGNING_ALLOWED=NO          
     artifacts:
-      - build/ios/ipa/*.ipa
-      - /tmp/xcodebuild_logs/*.log
       - $HOME/Library/Developer/Xcode/DerivedData/**/Build/**/*.app
-      - $HOME/Library/Developer/Xcode/DerivedData/**/Build/**/*.dSYM
     publishing:
-      # See the following link for details about email publishing - https://docs.codemagic.io/yaml-publishing/email
       email:
         recipients:
           - daniela.silva6@universo.univates.br
-        notify:
-          success: true     # To not receive a notification when a build succeeds
-          failure: false    # To not receive a notification when a build fails
       app_store_connect:
-          api_key: MIGTAgEAMBMGByqGSM49AgEGCCqGSM49AwEHBHkwdwIBAQQglFJ+NOBNXO3x8bcCWt9s6ahgSpMTEKvXFFL/zw4c9kKgCgYIKoZIzj0DAQehRANCAAR8ogvtW8TMsjNpyKs3M35/9+V8+zCr7+0+SCl7IrjZ/8F/RMYUHUxuMtMCQm/602XF5R/P2nj0S+YtNUQJVjPC      # Contents of the API key, can also reference environment variable such as $APP_STORE_CONNECT_PRIVATE_KEY
-          key_id: 9ZAY8TX227    # Alphanumeric value that identifies the API key, can also reference environment variable such as $APP_STORE_CONNECT_KEY_IDENTIFIER
-          issuer_id: 1b3468b7-131d-4535-a545-4e2b4c7ed1e1       # Alphanumeric value that identifies who created the API key, can also reference environment variable such as $APP_STORE_CONNECT_ISSUER_ID
-          submit_to_testflight: true        # Optional boolean, defaults to false. Whether or not to submit the uploaded build to TestFlight to automatically enroll your build to beta testers. 
+        api_key: MIGTAgEAMBMGByqGSM49AgEGCCqGSM49AwEHBHkwdwIBAQQglFJ+NOBNXO3x8bcCWt9s6ahgSpMTEKvXFFL/zw4c9kKgCgYIKoZIzj0DAQehRANCAAR8ogvtW8TMsjNpyKs3M35/9+V8+zCr7+0+SCl7IrjZ/8F/RMYUHUxuMtMCQm/602XF5R/P2nj0S+YtNUQJVjPC
+        key_id: 9ZAY8TX227
+        issuer_id: 1b3468b7-131d-4535-a545-4e2b4c7ed1e1
+        submit_to_testflight: true
