--- a/codemagic.yaml
+++ b/codemagic.yaml
@@ -1,6 +1,26 @@
 workflows:
   ios-project-debug: # workflow ID
-    name: iOS debug # workflow name        
+    name: iOS debug # workflow name
+    environment:
+      xcode: latest
+      cocoapods: default
+      vars:
+          XCODE_PROJECT: "XCODE_PROJECT.xcodeproj" # <-- Put the name of your project here. 
+          XCODE_SCHEME: "XCODE_SCHEME" # <-- Put the name of your scheme here.
+    scripts:
+      - name: Run tests
+        script: |
+          xcodebuild \
+          -project "$XCODE_PROJECT" \
+          -scheme "$XCODE_SCHEME" \
+          -sdk iphonesimulator \
+          -destination 'platform=iOS Simulator,name=iPhone 12,OS=14.1' \
+          clean build test CODE_SIGN_IDENTITY="" CODE_SIGNING_REQUIRED=NO          
+      - name: Build debug app
+        script: |
+          xcodebuild build -project "$XCODE_PROJECT" \
+          -scheme "$XCODE_SCHEME" \
+          CODE_SIGN_IDENTITY="" CODE_SIGNING_REQUIRED=NO CODE_SIGNING_ALLOWED=NO          
     artifacts:
       - $HOME/Library/Developer/Xcode/DerivedData/**/Build/**/*.app
     publishing:
@@ -12,7 +32,3 @@ workflows:
         key_id: 9ZAY8TX227
         issuer_id: 1b3468b7-131d-4535-a545-4e2b4c7ed1e1
         submit_to_testflight: true
-        beta_groups:
-          - Testes
-          - App Store Connect Users
-          - Teste App
