--- a/codemagic.yaml
+++ b/codemagic.yaml
@@ -49,14 +49,14 @@ workflows:
             #- name: Use system default keychain
               #script: |
                 #keychain add-certificates
-            - name: Increment build number
-              script: |
+            #- name: Increment build number
+              #script: |
                 #!/bin/sh
-                set -e
-                set -x
-                cd $FCI_BUILD_DIR/ios
+                #set -e
+                #set -x
+                #cd $FCI_BUILD_DIR/ios
                 # agvtool new-version -all $(($BUILD_NUMBER + 1))
-                agvtool new-version -all $(($(app-store-connect get-latest-testflight-build-number "$APP_STORE_APP_ID") + 1))
+                #agvtool new-version -all $(($(app-store-connect get-latest-testflight-build-number "$APP_STORE_APP_ID") + 1))
             - name: Set up code signing settings on Xcode project
               script: |
                 xcode-project use-profiles --warn-only
