change: ajustes arquivo yaml

--- a/codemagic.yaml
+++ b/codemagic.yaml
@@ -1,17 +1,23 @@
 workflows:
-  my-workflow:
-    publishing:
-      app_store_connect:
-        api_key: MIGTAgEAMBMGByqGSM49AgEGCCqGSM49AwEHBHkwdwIBAQQglFJ+NOBNXO3x8bcCWt9s6ahgSpMTEKvXFFL/zw4c9kKgCgYIKoZIzj0DAQehRANCAAR8ogvtW8TMsjNpyKs3M35/9+V8+zCr7+0+SCl7IrjZ/8F/RMYUHUxuMtMCQm/602XF5R/P2nj0S+YtNUQJVjPC
-        key_id: 9ZAY8TX227
-        issuer_id: 1b3468b7-131d-4535-a545-4e2b4c7ed1e1
-        submit_to_testflight: true
-        beta_groups:
-          - Testes
-          - App Store Connect Users
-          - Teste App
-    artifacts:
-      - build/ios/ipa/*.ipa
-      - /tmp/xcodebuild_logs/*.log
-      - $HOME/Library/Developer/Xcode/DerivedData/**/Build/**/*.app
-      - $HOME/Library/Developer/Xcode/DerivedData/**/Build/**/*.dSYM
+    react-native:
+        name: reactnativeappsigning
+        environment:
+            vars:
+                XCODE_WORKSPACE: "CentralDoCorretorApp"
+                XCODE_SCHEME: "CentralDoCorretorApp"
+            node: latest
+        scripts:
+            - npm install
+            - echo "sdk.dir=$ANDROID_SDK_ROOT" > "$CM_BUILD_DIR/android/local.properties"
+            - |
+                # build Android
+                cd android
+                ./gradlew assembleDebug
+            - |
+                # build iOS
+                cd ios
+                pod install
+                xcodebuild build -workspace "$XCODE_WORKSPACE.xcworkspace" -scheme "$XCODE_SCHEME" CODE_SIGN_IDENTITY="" CODE_SIGNING_REQUIRED=NO CODE_SIGNING_ALLOWED=NO
+        artifacts:
+            - android/app/build/outputs/**/**/*.apk
+            - $HOME/Library/Developer/Xcode/DerivedData/**/Build/**/*.app
