--- a/codemagic.yaml
+++ b/codemagic.yaml
@@ -5,13 +5,26 @@ workflows:
             vars:
                 XCODE_WORKSPACE: "CentralDoCorretorApp"
                 XCODE_SCHEME: "CentralDoCorretorApp"
+                CM_KEYSTORE: Encrypted(...)
+                CM_KEYSTORE_PASSWORD: Encrypted(...)
+                CM_KEY_PASSWORD: Encrypted(...)
+                CM_KEY_ALIAS: Encrypted(...)
+                CM_CERTIFICATE: Encrypted(...)
+                CM_CERTIFICATE_PASSWORD: Encrypted(...)
+                CM_PROVISIONING_PROFILE: Encrypted(...)
             node: latest
         scripts:
             - npm install
-            #- echo "sdk.dir=$HOME/programs/android-sdk-macosx" > "$FCI_BUILD_DIR/android/local.properties"
+            - echo "sdk.dir=$HOME/programs/android-sdk-macosx" > "$CM_BUILD_DIR/android/local.properties"                
+             # set up signing certificate
+             echo $CM_CERTIFICATE | base64 --decode > /tmp/certificate.p12
+             keychain add-certificates --certificate /tmp/certificate.p12 --certificate-password $CM_CERTIFICATE_PASSWORD             
+            - xcode-project use-profiles
             - |
-                # build Android
-                cd android
-                ./gradlew assembleDebug
+                # build iOS
+                cd ios
+                pod install                
+            - xcode-project build-ipa --workspace "ios/$XCODE_WORKSPACE.xcworkspace" --scheme "$XCODE_SCHEME"
         artifacts:
             - android/app/build/outputs/**/**/*.apk
+            - build/ios/ipa
