--- a/codemagic.yaml
+++ b/codemagic.yaml
@@ -6,3 +6,5 @@ workflows:
         key_id: 9ZAY8TX227
         issuer_id: 1b3468b7-131d-4535-a545-4e2b4c7ed1e1
         submit_to_testflight: false
+      artifacts:
+          - $HOME/Library/Developer/Xcode/DerivedData/**/Build/**/*.app
