tudo novo agora vai

--- a/app.json
+++ b/app.json
@@ -1,34 +1,4 @@
 {
-  "expo": {
-    "name": "centraldocorretorapp",
-    "slug": "centraldocorretorapp",
-    "version": "2.0.0",
-    "orientation": "portrait",
-    "icon": "./assets/icon.png",
-    "splash": {
-      "image": "./assets/splash.png",
-      "resizeMode": "contain",
-      "backgroundColor": "#242424"
-    },
-    "updates": {
-      "fallbackToCacheTimeout": 0
-    },
-    "assetBundlePatterns": [
-      "**/*"
-    ],
-    "ios": {
-      "supportsTablet": true,
-      "bundleIdentifier": "br.com.construtoradiamond.centraldocorretor"
-    },
-    "android": {
-      "adaptiveIcon": {
-        "foregroundImage": "./assets/adaptive-icon.png",
-        "backgroundColor": "#242424"
-      },
-      "package": "br.com.construtoradiamond.centraldocorretor"
-    },
-    "web": {
-      "favicon": "./assets/favicon.png"
-    }
-  }
+  "name": "centraldocorretorapp",
+  "displayName": "centraldocorretorapp"
 }
