--- a/package.json
+++ b/package.json
@@ -1,28 +1,31 @@
 {
   "name": "centraldocorretorapp",
-  "version": "1.0.0",
-  "main": "node_modules/expo/AppEntry.js",
+  "version": "0.0.1",
+  "private": true,
   "scripts": {
-    "start": "expo start",
-    "android": "expo start --android",
-    "ios": "expo start --ios",
-    "web": "expo start --web",
-    "eject": "expo eject"
+    "android": "react-native run-android",
+    "ios": "react-native run-ios",
+    "start": "react-native start",
+    "test": "jest",
+    "lint": "eslint ."
   },
   "dependencies": {
-    "expo": "~44.0.0",
-    "expo-splash-screen": "~0.14.1",
-    "expo-status-bar": "~1.2.0",
-    "expo-updates": "~0.11.6",
-    "react": "17.0.1",
-    "react-dom": "17.0.1",
-    "react-native": "0.64.3",
-    "react-native-web": "0.17.1",
-    "react-native-webview": "11.15.0",
-    "yet": "^0.1.0"
+    "react": "17.0.2",
+    "react-native": "0.68.2",
+    "react-native-splash-screen": "^3.3.0",
+    "react-native-webview": "^11.21.2"
   },
   "devDependencies": {
-    "@babel/core": "^7.12.9"
+    "@babel/core": "7.18.2",
+    "@babel/runtime": "7.18.3",
+    "@react-native-community/eslint-config": "2.0.0",
+    "babel-jest": "26.6.3",
+    "eslint": "7.32.0",
+    "jest": "26.6.3",
+    "metro-react-native-babel-preset": "0.67.0",
+    "react-test-renderer": "17.0.2"
   },
-  "private": true
+  "jest": {
+    "preset": "react-native"
+  }
 }
