--- a/codemagic.yaml
+++ b/codemagic.yaml
@@ -28,6 +28,9 @@ workflows:
       - name: Install npm dependencies
         script: |
                     npm install
+      - name: Install rbnv
+        script: |
+                    rbenv install 2.6.10-p643
       - name: Install CocoaPods dependencies
         script: |
                     sudo gem install cocoapods
