--- a/codemagic.yaml
+++ b/codemagic.yaml
@@ -28,12 +28,12 @@ workflows:
       - name: Install npm dependencies
         script: |
                     npm install
-      - name: Install rbenv list
-        script: |
-                    rbenv install --list
       - name: Install rbenv
         script: |
-                    rbenv install 2.6.6-p643
+                    rbenv install 2.7.4-p643
+      - name: Local rbenv
+        script: |
+                    rbenv local 2.7.4-p643
       - name: Install CocoaPods dependencies
         script: |
                     sudo gem install cocoapods
